fixes on mobile viewport :)

--- a/styles/src/components/search.css
+++ b/styles/src/components/search.css
@@ -19,6 +19,7 @@ div#search-modal {
 	border: none;
 	width: 100%;
 	height: 100%;
+	max-height: 100vh;
 	top: unset;
 	bottom: 0;
 	right: 0;
@@ -87,7 +88,7 @@ div#search-modal div#results {
 }
 
 :root[data-display="mobile"] div#search-modal div#results {
-	height: calc(100% - 10rem);
+	height: 100%
 	justify-content: end;
 	flex-direction: column-reverse;
 }
